# openstuder-gateway

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  develop.yml  packages.yml
cmake/: DeviceAccessDriver.cmake  GitVersion.cmake  Library.cmake  SIDeviceAccessDriver.cmake  SIExtensionDriver.cmake  SIGitVersion.cmake  SILibrary.cmake  SIStorageDriver.cmake  deviceaccessdriver.cmake  library.cmake  storagedriver.cmake
config/: datalog.conf  drivers.conf  extensions.conf  gateway.conf  sigatewayd.conf  sigatewayd.service.in  users.txt
doc/: Device abstraction.vpp  blueooth-api-grammar.bnf  websocket-api-grammar.bnf
install/: SIAuthorizeConfig.cmake.in  SIDeviceAccessConfig.cmake.in  SIExtensionConfig.cmake.in  SIStorageConfig.cmake.in  conffiles  postinst  postrm  prerm  sigatewayd.service.in
src/api/: sidevice.cpp  sidevice.h  sideviceaccess.cpp  sideviceaccess.h  sideviceaccessdriver.h  sideviceaccessregistry.cpp  sideviceaccessregistry.h  sijsonflags.h  siproperty.h  sipropertyflags.h  sipropertytype.cpp  sipropertytype.h  sipropertywriteresult.h  sistatus.cpp
src/api/authorize/: CMakeLists.txt  sitextfileusermanagement.cpp  sitextfileusermanagement.h  siuserauthorizedriver.cpp  siuserauthorizedriver.h  siuserauthorizer.h
src/api/deviceaccess/: CMakeLists.txt  siaccesslevel.cpp  siaccesslevel.h  sidevice.cpp  sidevice.h  sideviceaccess.cpp  sideviceaccess.h  sideviceaccessdriver.h  sideviceaccessregistry.cpp  sideviceaccessregistry.h  sidevicefunctions.h  sidevicemessage.cpp  sidevicemessage.h  siglobalpropertyid.cpp  siglobalpropertyid.h  sijdescriptionflags.h  sijsonflags.h  siproperty.cpp  siproperty.h  sipropertyflags.h  sipropertyid.h  sipropertyreadresult.cpp  sipropertyreadresult.h  sipropertytype.cpp  sipropertytype.h  sipropertywriteflags.h  sipropertywriteresult.cpp  sipropertywriteresult.h  sistatus.cpp  sistatus.h
src/api/extension/: CMakeLists.txt  siextension.cpp  siextension.h  siextensionbluetoothresult.cpp  siextensionbluetoothresult.h  siextensioncontext.h  siextensiondriver.cpp  siextensiondriver.h  siextensionstatus.cpp  siextensionstatus.h  siextensionwebsocketresult.cpp  siextensionwebsocketresult.h
src/api/storage/: CMakeLists.txt  sidevicemessagestorage.cpp  sidevicemessagestorage.h  sipropertyhistorystorage.cpp  sipropertyhistorystorage.h  sistorage.h  sistoragedriver.cpp  sistoragedriver.h
src/cli/: CMakeLists.txt  main.cpp  siabstractcommand.cpp  siabstractcommand.h  sihelpcommand.cpp  siusermanagementcommand.cpp
src/daemon/: CMakeLists.txt  main.cpp  siabstractoperation.cpp  siabstractoperation.h  siabstractpropertymanager.cpp  siabstractpropertymanager.h  sidaemon.cpp  sidaemon.h  siglobalpropertyid.cpp  siglobalpropertyid.h  sipropertyreadoperation.cpp  sipropertyreadoperation.h  sipropertywriteoperation.cpp  sipropertywriteoperation.h  sisequentialpropertymanager.cpp  sisequentialpropertymanager.h  sisettings.cpp  sisettings.h
src/daemon/bluetooth/: siabstractbluetoothprotocol.h  sibluetoothmanager.cpp  sibluetoothmanager.h  sibluetoothprotocolframe.cpp  sibluetoothprotocolframe.h  sibluetoothprotocolv1.cpp  sibluetoothprotocolv1.h
src/daemon/deviceaccess/: sideviceaccessmanager.cpp  sideviceaccessmanager.h  sidevicepropertymanager.cpp  sidevicepropertymanager.h  siglobalpropertyid.cpp  siglobalpropertyid.h  (+2 more)
src/drivers/deviceaccess/xcom485i/: CMakeLists.txt  xcom485ibatterymanager.cpp  xcom485ibatterymanager.h  xcom485idevice.cpp  xcom485idevice.h  xcom485ideviceaccess.cpp  xcom485ideviceaccess.h  xcom485idriver.cpp  xcom485idriver.json  xcom485iproperty.h  xcom485ivariostring.cpp  xcom485ivariostring.h  xcom485ivariotrack.cpp  xcom485ixtender.cpp  xcom485ixtender.h
src/drivers/extension/usermanagement/: CMakeLists.txt  usermanagementextension.cpp  usermanagementextension.h  usermanagementextensiondriver.cpp  usermanagementextensiondriver.h  usermanagementextensiondriver.json
src/drivers/extension/webdata/: CMakeLists.txt  webdataextension.cpp  webdataextension.h  webdataextensiondriver.cpp  webdataextensiondriver.h  webdataextensiondriver.json
src/drivers/extension/webstorage/: CMakeLists.txt  webstorageextension.cpp  webstorageextension.h  webstorageextensiondriver.cpp  webstorageextensiondriver.h  webstorageextensiondriver.json
src/drivers/extension/wificonfig/: CMakeLists.txt  wificonfigextension.cpp  wificonfigextension.h  wificonfigextensiondriver.cpp  wificonfigextensiondriver.h  wificonfigextensiondriver.json
src/drivers/extension/wificonfig/resources/: ap-setup.sh  resources.qrc
src/sigatewayd/: CMakeLists.txt  main.cpp  sicontext.h  sidaemon.cpp  sidaemon.h  sisettings.cpp  sisettings.h
src/sigatewayd/bluetooth/: siabstractbluetoothprotocol.h  sibluetoothmanager.cpp  sibluetoothmanager.h  sibluetoothprotocolframe.cpp  sibluetoothprotocolframe.h  sibluetoothprotocolv1.cpp  sibluetoothprotocolv1.h
src/sigatewayd/datalog/: sidatalogconfiguration.cpp  sidatalogconfiguration.h  sidataloggroup.cpp  sidataloggroup.h  sidatalogmanager.cpp  sidatalogmanager.h
src/sigatewayd/deviceaccess/: sideviceaccessmanager.cpp  sideviceaccessmanager.h  sisequentialpropertymanager.cpp  sisequentialpropertymanager.h
src/sigatewayd/deviceaccess/operations/: siabstractoperation.cpp  siabstractoperation.h  sideviceenumerationoperation.h  sipropertiesreadoperation.cpp  sipropertiesreadoperation.h  sipropertyreadoperation.cpp  sipropertyreadoperation.h  sipropertywriteoperation.cpp  sipropertywriteoperation.h
src/sigatewayd/extension/: siextensionmanager.cpp  siextensionmanager.h  sisessioncontext.h
src/sigatewayd/storage/: sistoragemanager.cpp  sistoragemanager.h
src/sigatewayd/websocket/: siabstractwebsocketprotocol.h  siwebsocketconnection.cpp  siwebsocketconnection.h  siwebsocketmanager.cpp  siwebsocketmanager.h  siwebsocketprotocolframe.cpp  siwebsocketprotocolframe.h  siwebsocketprotocolv1.cpp  siwebsocketprotocolv1.h
src/sigwctl/: CMakeLists.txt  main.cpp  siabstractcommand.cpp  siabstractcommand.h  sihelpcommand.cpp  siusermanagementcommand.cpp  siversioncommand.cpp
(+45 files in other folders)
