si_add_library(SIDeviceAccess)
si_add_library_public_headers(SIDeviceAccess
                              siaccesslevel.h
                              sidevice.h
                              sideviceaccess.h
                              sideviceaccessdriver.h
                              sideviceaccessregistry.h
                              sidevicemessage.h
                              siglobalpropertyid.h
                              sijdescriptionflags.h
                              siproperty.h
                              sipropertyflags.h
                              sipropertyid.h
                              sipropertyreadresult.h
                              sipropertytype.h
                              sipropertywriteflags.h
                              sipropertywriteresult.h
                              sistatus.h)
si_add_library_sources(SIDeviceAccess
                       siaccesslevel.cpp
                       sidevice.cpp
                       sideviceaccess.cpp
                       sideviceaccessregistry.cpp
                       sidevicemessage.cpp
                       siglobalpropertyid.cpp
                       siproperty.cpp
                       sipropertyreadresult.cpp
                       sipropertytype.cpp
                       sipropertywriteresult.cpp
                       sistatus.cpp)
target_link_libraries(SIDeviceAccess Qt5::Core)
si_install_library(SIDeviceAccess)